style.css
html, body {
    overflow-x: hidden;
  }

body {
    position: relative;
    margin-left: 10px;
}

button {
    font-size: 30px;
    width: 20%;
    /* min-height: 10%; */
    color: white;
    background-color: rgb(88, 89, 91);
    border-width: thin;
}

#btn0 {
    width: 45%;
}

#btn-decimal, #btn-equal {
    width: 20%;
}

#btn-equal {
    background-color: rgb(227, 108, 51);
}

.row-5-left, .row-5-right {
    width: 50%;
}

#btn-delete {
    display: none;
}

#btn-reset {
    background-color: rgb(197, 88, 72);
}

#btn-signs, #btn-percentage, #btn-divide, #btn-multiply, #btn-subtract, #btn-add {
    background-color: rgb(16, 13, 15);
} 

.container {
    width: 600px;
    padding: 8px;
    border-radius: 5px;
    background: rgb(30,28,31);
    background: linear-gradient(234deg, rgba(30,28,31,1) 0%, rgba(57,56,59,1) 50%);
}

#calcDisplay {
    width: 95%;
    height: 120px;
    background-color: rgb(164, 175, 125);
    text-align: right;
    font-size: 50px;
}

.button-row-1, .button-row-2, .button-row-3, .button-row-4, .button-row-5 {
    display: flex;
    justify-content: center;
    margin-top: 3%;
    gap: 5%;
    height: 72px;

}

.button-row-1
{
    margin-top: 10%
}

.button-row-5 {
    margin-bottom: 10%;
}

.main-display {
    display: flex;
    justify-content: center;
    pointer-events: none;
    margin-top: 10%;
    margin-bottom: 15px;
}

.caption {
    font-size: 16px;
    text-align: center;
    width: 600px;
}

@media (max-width: 500px) {
    body {
        display: flex;
        justify-content: center;
        min-height: 100dvh;
        margin: 1px;
    }
    .container {
        /* min-width: 400px; */
        width: 95%;
        padding-left: 0px;
        padding-right: 0px;
    }

    .main-display {
        margin-top: 50px;
    }
    
    #calcDisplay {
        width: 90%;
        height: 60px; 
   }

   .button-row-1, .button-row-2, .button-row-3, .button-row-4, .button-row-5 {
    gap: 14px;
   }

   #btn0 {
    width: 44%;
}
    .caption {
        display: none;
    }
}

